# physarum

./: .gitignore  Cargo.toml  Notes.md  README.md  TODO.md  rustfmt.toml
benches/: trig.rs
notes/: physarum.md.html
src/: blur.rs  grid.rs  imgdata.rs  lib.rs  main.rs  math.rs  model.rs  palette.rs  trig.rs  util.rs
