[package]
name = "physarum"
version = "0.1.0"
authors = ["mindv0rtex <mindv0rtex@users.noreply.github.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
image = "0.23"
indicatif = "0.15"
itertools = "0.10"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "trig"
harness = false
