[package]
name = "physarum"
version = "0.1.0"
authors = ["mindv0rtex <mindv0rtex@users.noreply.github.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.19"
image = "0.23.14"
indicatif = {version = "0.15.0", features = ["rayon"]}
itertools = "0.10"
rand = "0.8.3"
rand_distr = "0.4"
rayon = "1.5"
arrayfire = {git = "https://github.com/arrayfire/arrayfire-rust.git"}
#arrayfire = "3.8.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "trig"
harness = false

[profile.dev]
codegen-units = 1
opt-level = 3
target-cpu = "native"
lto = "thin"

[profile.release]
codegen-units = 1
opt-level = 3
target-cpu = "native"
lto = "fat"