[package]
name = "physarum"
version = "0.1.0"
authors = ["mindv0rtex <mindv0rtex@users.noreply.github.com>", "Simon Gardling <titaniumtown@gmail.com>"]
edition = "2018"

[dependencies]
image = "0.23.14"
indicatif = {version = "0.15.0", features = ["rayon"]}
itertools = "0.10"
rand = "0.8.3"
rand_distr = "0.4"
#rayon = "1.5"
rayon = {git = "https://github.com/rayon-rs/rayon.git"}

[dev-dependencies]
criterion = "0.3.4"

[patch.crates-io]
rayon = {git = "https://github.com/rayon-rs/rayon.git"} #for using git version of rayon

[profile.dev]
codegen-units = 1
opt-level = 3
target-cpu = "native"
lto = "fat"
debug = true

[profile.release]
codegen-units = 1
opt-level = 3
target-cpu = "native"
lto = "fat"
debug = false